ex3 chp 1 finish

--- a/machine-learning-ex2/ex2/ex2.ipynb
+++ b/machine-learning-ex2/ex2/ex2.ipynb
@@ -389,7 +389,7 @@
    "metadata": {},
    "source": [
     "### 2.5 不同正则化参数的影响\n",
-    "取lambda=0（过拟合）和lambda=100，观察决策边界的变化。"
+    "取lambda=0（过拟合）和lambda=100（欠拟合），观察决策边界的变化。"
    ]
   },
   {
